deploy/k8s/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubi-local-ingress
  namespace: kubi
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: kubi.kontactless.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubi-frontend-service
            port:
              number: 80
  - host: backend.kubi.kontactless.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubi-backend-service
            port:
              number: 8000
  - host: agent.kubi.kontactless.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubi-agent-service
            port:
              number: 8080
